<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.algonquincollege.ari.playtimearidaydemo.MainActivity">
    <item
        android:id="@+id/main_options_menu_item_play_tutorial"
        android:orderInCategory="100"
        android:title="@string/main_options_menu_item_play_tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_options_menu_item_settings"
        android:orderInCategory="100"
        android:title="@string/main_options_menu_item_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/main_options_menu_item_send_feedback"
        android:orderInCategory="100"
        android:title="@string/main_options_menu_item_send_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_options_menu_item_help"
        android:orderInCategory="100"
        android:title="@string/main_options_menu_item_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_options_menu_demo_restart_application"
        android:orderInCategory="100"
        android:title="@string/main_options_menu_demo_restart_application"
        app:showAsAction="never" />
</menu>
